Fixed giver img alignment

--- a/client/sass/overlay.sass
+++ b/client/sass/overlay.sass
@@ -85,8 +85,9 @@ gs-overlay
 
   img.giver
     display: none
-    max-width: 50%
-    max-height: 50%
+    margin: 0 auto
+    max-width: 60%
+    max-height: 60%
     border-radius: 50%
     +box-shadow(#fff, 0, 0, 10px)
 
